# nizm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
npm/nizm/: package.json
npm/nizm-cli/: package.json
npm/nizm-darwin-arm64/: package.json
npm/nizm-darwin-x64/: package.json
npm/nizm-linux-arm64/: package.json
npm/nizm-linux-x64/: package.json
npm/nizm-win32-x64/: package.json
scripts/: generate-npm.mjs
src/: config.rs  doctor.rs  git.rs  glob.rs  init.rs  installer.rs  knowledge.rs  main.rs  runner.rs  stash.rs  style.rs  uninstaller.rs
