[package]
name = "nizm"
version = "0.1.0"
edition = "2024"
description = "Lightweight, zero-config alternative to pre-commit"

[package.metadata.nizm.hooks]
rustfmt = { cmd = "cargo fmt -- --check", glob = "*.rs" }
clippy = { cmd = "cargo clippy -- -D warnings", glob = "*.rs" }


[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
anstyle = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
dialoguer = "0.11"
globset = "0.4"
indexmap = { version = "2", features = ["serde"] }
ctrlc = { version = "3", features = ["termination"] }
