[package]
name = "nizm"
version = "0.0.0"
edition = "2024"
description = "Lightweight, zero-config alternative to pre-commit"
license = "MIT"
repository = "https://github.com/viperadnan-git/nizm"
readme = "README.md"
keywords = ["git", "hooks", "pre-commit", "linter", "formatter"]
categories = ["development-tools", "command-line-utilities"]

[package.metadata.nizm.hooks]
clippy = { cmd = "cargo clippy --fix --allow-dirty -- -D warnings", glob = "*.rs" }
rustfmt = { cmd = "cargo fmt", glob = "*.rs" }


[dependencies]
clap = { version = "4", default-features = false, features = ["derive", "error-context", "help", "usage", "std", "color"] }
anyhow = "1"
anstyle = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = { version = "0.25", features = ["serde"] }
dialoguer = { version = "0.12", default-features = false }
indexmap = { version = "2", features = ["serde"] }
ctrlc = { version = "3", features = ["termination"] }

[profile.release]
strip = true
lto = true
